--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -233,7 +233,7 @@
   }
 
   .logo {
-    margin-top: 40px;
+    margin-top: 100px;
     margin-bottom: 20px;
     width: 240px;
     height: 135px;
@@ -292,7 +292,7 @@
 
 
   .logo {
-    margin-top: 30px;
+    margin-top: 100px;
     margin-bottom: 15px;
     width: 200px;
     height: 115px;
